# BQTableRemover

./: pyproject.toml
src/: remover.py
tests/: test_bq_table_remover.py
